--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.scroll-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.scroll-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
