add fitur hutang pegawai dan perbaiki margin table tiap menu

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ body {
 .scroll-hide::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
